force-app/main/default/objects/Student__c/fields/Class_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Class_Enrolled__c</fullName>
    <label>Class Enrolled</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>