force-app/main/default/objects/Student__c/fields/College_name__c.field-meta.xml
<CustomField>
    <fullName>College_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>College name</description>
    <label>College Name</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>