force-app/main/default/objects/Student__c/recordTypes/Student_India.recordType-meta.xml
<RecordType>
    <fullName>Student_India</fullName>
    <active>true</active>
    <description>Indian Student</description>
    <label>Student India</label>
</RecordType>