force-app/main/default/objects/Student__c/recordTypes/Student_USA.recordType-meta.xml
<RecordType>
    <fullName>Student_USA</fullName>
    <active>true</active>
    <description>USA Students</description>
    <label>Student USA</label>
</RecordType>